added 6.0 and 7.0 constraints. replaced oh-my-smtp with mail-pace

--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
     }
   ],
   "require": {
-    "symfony/amazon-mailer": "^5.4",
-    "symfony/google-mailer": "^5.4",
-    "symfony/mailchimp-mailer": "^5.4",
-    "symfony/mailgun-mailer": "^5.4",
-    "symfony/mailjet-mailer": "^5.4",
-    "symfony/postmark-mailer": "^5.4",
-    "symfony/sendgrid-mailer": "^5.4",
-    "symfony/sendinblue-mailer": "^5.4",
-    "symfony/oh-my-smtp-mailer": "^5.4"
+    "symfony/amazon-mailer": "^5.4 || ^6.0 || ^7.0",
+    "symfony/google-mailer": "^5.4 || ^6.0 || ^7.0",
+    "symfony/mailchimp-mailer": "^5.4 || ^6.0 || ^7.0",
+    "symfony/mailgun-mailer": "^5.4 || ^6.0 || ^7.0",
+    "symfony/mailjet-mailer": "^5.4 || ^6.0 || ^7.0",
+    "symfony/postmark-mailer": "^5.4 || ^6.0 || ^7.0",
+    "symfony/sendgrid-mailer": "^5.4 || ^6.0 || ^7.0",
+    "symfony/sendinblue-mailer": "^5.4 || ^6.0 || ^7.0",
+    "symfony/mail-pace-mailer": "^6.0 || ^7.0"
   }
 }
